# chatbot

./: Containerfile  Containerfile.api  Makefile  README.md  api-entrypoint.sh  chainlit.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: container-publish.yml  pdm-update.yml  tox-lint.yml
docs/: api-quickstart.md  deploy-quickstart.md  ui-quickstart.md  user-quickstart.md
docs/images/: chatbot_page.odp
scripts/: install-tox.sh
src/: api.py  app.py  auth.py  chat.py  config.py  constants.py  conversation.py  embeddings.py  feedback.py  generation.py  mongodb.py  prompt.py  settings.py  vectordb.py
src/.chainlit/: config.toml
